@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-19T16:08:53Z",
+  "timestamp" : "2023-07-20T08:09:09Z",
   "count_outdated" : 1267,
   "uniques_outdated" : 679,
-  "count" : 1291,
-  "uniques" : 693,
+  "count" : 1292,
+  "uniques" : 694,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -109,6 +109,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
