@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 3,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2023-07-19T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
