@@ -1,3 +1,12 @@
+2023-07-20T08:09:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5608498695 # 1746
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 679 1267 / 693 1291
+* notice: next accum: outdated-unq outdated-all / unq all: 679 1267 / 694 1292
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-20]
+
 2023-07-19T16:08:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5601496594 # 1744
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
